--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
   }
 }
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GT1LN8E9BP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-GT1LN8E9BP');
+</script>
 </head>
   <body>
     <div id="root"></div>
