refactor: Implement new color scheme and improve UI
Introduces a new color palette and applies it across the application for a more cohesive and modern look.

This commit also refactors the `Calculator` component to remove unnecessary state management for `totalBarrels` and the `onTotalBarrelsChange` prop. The calculation logic remains the same, but the component is now more self-contained. Additionally, minor stylistic improvements are made to the icons and form elements.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <style>
+      :root {
+        --text: #040f43;
+        --background: #fbfbfe;
+        --primary: #0000ff;
+        --secondary: #dddbff;
+        --accent: #28aae2;
+      }
       body {
         font-family: 'Inter', sans-serif;
+        background-color: var(--background);
+        color: var(--text);
       }
     </style>
   <script type="importmap">
